gcc/testsuite/g++.dg/other/error21.C
// PR c++/34273

struct A {};

struct B : A
{
  B() : A()... {} // { dg-error "cannot expand" }
};
